# TextParser

./: .gitignore  CMakeLists.txt  Readme.md  example_Readfromfile.cpp  parser.cpp
assets/: test.txt
docs/QITs/: QIT Template.md  QIT1: Summary Improvement.md
docs/design whitepapers/: Design Template.md
examples/: CMakeLists.txt  summarize_text.cpp
lib/: CMakeLists.txt  parser.cpp
lib/include/: common.h  containerHelper.hpp  parser.h
